--- a/infra/addons/prometheus-stack/values.yaml
+++ b/infra/addons/prometheus-stack/values.yaml
@@ -31,7 +31,7 @@ grafana:
   grafana.ini:
     server:
       domain: grafana.sharkapp.local
-      root_url: http://grafana.sharkapp.local:8000
+      root_url: https://grafana.sharkapp.local:31450/
     auth.anonymous:
       enabled: true
       org_role: Viewer
