Update grafana rules

--- a/infra/addons/prometheus-stack/templates/grafana-ingress.yaml
+++ b/infra/addons/prometheus-stack/templates/grafana-ingress.yaml
@@ -14,7 +14,7 @@ spec:
   - host: grafana.sharkapp.local
     http:
       paths:
-      - path: /
+      - path: /.*
         pathType: Prefix
         backend:
           service:
