Simplify Grafana Ingress by removing regex path

--- a/infra/addons/prometheus-stack/templates/grafana-ingress.yaml
+++ b/infra/addons/prometheus-stack/templates/grafana-ingress.yaml
@@ -14,10 +14,14 @@ spec:
   - host: grafana.sharkapp.local
     http:
       paths:
-      - path: /.*
+      - path: /
         pathType: Prefix
         backend:
           service:
             name: prometheus-stack-dev-grafana
             port:
               number: 80
+  tls:
+  - hosts:
+    - grafana.sharkapp.local
+    secretName: sharkapp-tls
