--- a/infra/addons/prometheus-stack/templates/grafana-ingress.yaml
+++ b/infra/addons/prometheus-stack/templates/grafana-ingress.yaml
@@ -8,6 +8,8 @@ metadata:
     nginx.ingress.kubernetes.io/proxy-buffer-size: "128k"
     nginx.ingress.kubernetes.io/proxy-buffers: "4 256k"
     nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
+    nginx.ingress.kubernetes.io/ssl-redirect: "false"
+    nginx.ingress.kubernetes.io/force-ssl-redirect: "false"
 spec:
   ingressClassName: nginx
   rules:
@@ -21,7 +23,4 @@ spec:
             name: prometheus-stack-dev-grafana
             port:
               number: 80
-  tls:
-  - hosts:
-    - grafana.sharkapp.local
-    secretName: sharkapp-tls
+  # Removed TLS section to disable HTTPS
