Update Process Exporter

--- a/infra/addons/process-exporter/Chart.yaml
+++ b/infra/addons/process-exporter/Chart.yaml
@@ -1,4 +1,6 @@
 apiVersion: v2
-name: mongodb
-description: A Helm chart for ProcessExporter
+name: process-exporter
+description: A Helm chart for deploying process-exporter
+type: application
 version: 0.1.0
+appVersion: "0.8.7"
