--- a/infra/addons/process-exporter/process-exporter-config.yaml
+++ b/infra/addons/process-exporter/process-exporter-config.yaml
@@ -1,4 +1,5 @@
-process_names:
-  - name: "{{.Comm}}"
-    comm:
-      - .*
+config:
+  processNames:
+    - name: "{{.Comm}}"
+      comm:
+        - .*
