--- a/infra/addons/process-exporter/templates/process-exporter-daemonset.yaml
+++ b/infra/addons/process-exporter/templates/process-exporter-daemonset.yaml
@@ -36,7 +36,7 @@ spec:
             cpu: "100m"
             memory: "128Mi"
         securityContext:
-          runAsUser: 0  # Run as root for debugging
+          runAsUser: 0  # Temporarily run as root to avoid permission issues
           runAsNonRoot: false
         volumeMounts:
         - name: proc
