Fix process-exporter ServiceMonitor labels

--- a/infra/addons/prometheus-stack/values.yaml
+++ b/infra/addons/prometheus-stack/values.yaml
@@ -100,3 +100,8 @@ app:
         - port: metrics
           path: /metrics
           interval: 15s
+          relabelings:
+            - sourceLabels: [__meta_kubernetes_pod_namespace]
+              targetLabel: namespace
+            - sourceLabels: [__meta_kubernetes_pod_label_app]
+              targetLabel: app
