--- a/infra/addons/prometheus-stack/values.yaml
+++ b/infra/addons/prometheus-stack/values.yaml
@@ -3,7 +3,7 @@ prometheus:
     serviceMonitorSelectorNilUsesHelmValues: false
     serviceMonitorSelector:
       matchLabels:
-        prometheus: prometheus-stack
+        release: prometheus-stack-dev
     podMonitorSelector:
       matchLabels:
         prometheus: prometheus-stack
@@ -66,7 +66,7 @@ app:
         matchLabels:
           app: frontend-dev
       additionalLabels:  # Ensure the label matches the selector
-        prometheus: prometheus-stack
+        release: prometheus-stack-dev
       endpoints:
         - port: http
           path: /metrics
@@ -83,7 +83,7 @@ app:
         matchLabels:
           app: backend-dev
       additionalLabels:
-        prometheus: prometheus-stack
+        release: prometheus-stack-dev
       endpoints:
         - port: http
           path: /metrics
@@ -98,7 +98,7 @@ app:
         matchLabels:
           app: process-exporter
       additionalLabels:
-        prometheus: prometheus-stack
+        release: prometheus-stack-dev
       endpoints:
         - port: metrics
           path: /metrics
