Fix ServiceMonitor labels to match Prometheus selector

--- a/infra/addons/prometheus-stack/templates/servicemonitor.yaml
+++ b/infra/addons/prometheus-stack/templates/servicemonitor.yaml
@@ -5,7 +5,7 @@ metadata:
   name: {{ .name }}
   namespace: {{ .namespace }}
   labels:
-    prometheus: prometheus-stack
+    release: prometheus-stack-dev
 spec:
   selector:
     {{- toYaml .selector | nindent 4 }}
