Set explicit namespace selector for Prometheus

--- a/infra/config/dev/monitoring-system/prometheus-stack/values.yaml
+++ b/infra/config/dev/monitoring-system/prometheus-stack/values.yaml
@@ -1,5 +1,9 @@
 # Environment-specific overrides (if any)
 prometheus:
+  prometheusSpec:
+    serviceMonitorNamespaceSelector:
+      matchLabels:
+        kubernetes.io/metadata.name: dev
   fullnameOverride: prometheus
 grafana:
   fullnameOverride: grafana
