Enhance process-exporter to include process name, pod, and container labels

--- a/infra/addons/process-exporter/templates/process-exporter-configmap.yaml
+++ b/infra/addons/process-exporter/templates/process-exporter-configmap.yaml
@@ -6,6 +6,9 @@ metadata:
 data:
   process-exporter.yaml: |
     process_names:
-      - name: "{{.Comm}}"
-        comm:
-          - node
+      - name: "{{.Comm}}-{{.Pid}}"
+        cmdline:
+          - ".*node.*"
+        labels:
+          pod: "{{.PodName}}"
+          container: "{{.ContainerName}}"
