--- a/infra/addons/prometheus-stack/values.yaml
+++ b/infra/addons/prometheus-stack/values.yaml
@@ -1,5 +1,10 @@
 prometheus:
+  enabled: true  # Ensure Prometheus instance is enabled
   prometheusSpec:
+    replicas: 1  # Number of Prometheus replicas
+    service:
+      type: ClusterIP
+      port: 9090  # Port for the prometheus-operated service
     kubeControllerManager:
       enabled: true
       scheme: http
@@ -7,7 +12,7 @@ prometheus:
         scheme: http
         insecureSkipVerify: true
       endpoints:
-        - 10252  # Metrics port for kube-controller-manager
+        - 10252
     kubeScheduler:
       enabled: true
       scheme: http
@@ -15,7 +20,7 @@ prometheus:
         scheme: http
         insecureSkipVerify: true
       endpoints:
-        - 10251  # Metrics port for kube-scheduler
+        - 10251
     kubeProxy:
       enabled: true
       scheme: http
@@ -23,7 +28,7 @@ prometheus:
         scheme: http
         insecureSkipVerify: true
       endpoints:
-        - 10249  # Metrics port for kube-proxy
+        - 10249
     kubeEtcd:
       enabled: true
       scheme: http
@@ -87,7 +92,7 @@ grafana:
         tracesToMetrics:
           datasourceUid: "prometheus"
   ingress:
-    enabled: false  # Disable Helm-managed Ingress
+    enabled: false
 prometheus-node-exporter:
   enabled: true
 app:
