Fix Prometheus fullnameOverride to create prometheus-operated service

--- a/infra/config/dev/values.yaml
+++ b/infra/config/dev/values.yaml
@@ -9,6 +9,7 @@ target:
   address: https://kubernetes.default.svc
   namespace: dev
   project: default
+  branch: Dev-Metrics-Alternative-Monitoring-Approaches
 loki:
   storage:
     bucketNames:
