Update PullPolicy in backend image

--- a/infra/addons/backend/values.yaml
+++ b/infra/addons/backend/values.yaml
@@ -1,7 +1,7 @@
 image:
   repository: kapilbhalodiya/ecom-backend
   tag: "latest"
-  pullPolicy: IfNotPresent
+  pullPolicy: Always
 
 env:
   MONGODB_URI: ""  # We'll set this dynamically in the deployment
