--- a/infra/addons/prometheus-stack/values.yaml
+++ b/infra/addons/prometheus-stack/values.yaml
@@ -103,6 +103,23 @@ grafana:
           datasourceUid: "prometheus"
   ingress:
     enabled: true
+    ingressClassName: nginx
+    annotations:
+      nginx.ingress.kubernetes.io/rewrite-target: /
+      nginx.ingress.kubernetes.io/proxy-buffer-size: "128k"
+      nginx.ingress.kubernetes.io/proxy-buffers: "4 256k"
+      nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
+      nginx.ingress.kubernetes.io/ssl-redirect: "false"
+      nginx.ingress.kubernetes.io/force-ssl-redirect: "false"
+    hosts:
+      - grafana.sharkapp.local
+    paths:
+      - path: /
+        pathType: Prefix
+  service:
+    type: ClusterIP
+    port: 80
+
 
 
 prometheus-node-exporter:
