updated the Grafana ingress to use HTTP

--- a/infra/config/dev/monitoring-system/prometheus-stack/values.yaml
+++ b/infra/config/dev/monitoring-system/prometheus-stack/values.yaml
@@ -5,5 +5,6 @@ prometheus:
       matchLabels:
         kubernetes.io/metadata.name: dev
 grafana:
+  namespaceOverride: dev
   fullnameOverride: grafana
-grafanaHost: grafana.sharkapp.local
+# grafanaHost: grafana.sharkapp.local
